Added 'treat_blob_as_binary' property to the driver.
This encompasses a couple of fixes to get binary objects handled
according to the specifications (table B-6).  getBinaryStream must be
implemented, getBytes must only operate on BINARY types and BLOB type.
The handling for BINARY types was added to allow applications that rely
on their specification (e.g. returning a byte array) to use them on BLOB
types, when 'treat_blob_as_binary' is set to true.

--- a/java/src/nl/cwi/monetdb/jdbc/MonetDriver.java.in
+++ b/java/src/nl/cwi/monetdb/jdbc/MonetDriver.java.in
@@ -240,6 +240,11 @@ final public class MonetDriver implements Driver {
 		prop.description = "Whether redirects issued by the server should be followed";
 		props.add(prop);
 
+		prop = new DriverPropertyInfo("treat_blob_as_binary", "false");
+		prop.required = false;
+		prop.description = "Whether BLOBs on the server should be treated as BINARY types, thus mapped to byte[]";
+		props.add(prop);
+
 		DriverPropertyInfo[] dpi = new DriverPropertyInfo[props.size()];
 		return((DriverPropertyInfo[])props.toArray(dpi));
 	}
