--- a/pathfinder/debian/control
+++ b/pathfinder/debian/control
@@ -28,7 +28,7 @@ Description: MonetDB xquery support for MonetDB4-server
  .
  This package contains the XQuery frontend for monetdb4.
 
-Package: libpf_ferry0
+Package: libpf-ferry0
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb1, libmonetdb4-server4
@@ -43,7 +43,7 @@ Description: MonetDB xquery support for MonetDB4-server
 Package: libmonetdb4-xquery-dev
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb4-xquery0, libpf_ferry0, libmonetdb-dev, libmonetdb4-server-dev
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonetdb4-xquery0, libpf-ferry0, libmonetdb-dev, libmonetdb4-server-dev
 Description: MonetDB xquery libraries
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
