--- a/python/debian/control
+++ b/python/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: optional
 Maintainer: Gijs Molenaar <gijs.molenaar@cwi.nl>
 Build-Depends: cdbs, debhelper (>= 7), python-central
-XS-Python-Version: 2.5, 2.6
+XS-Python-Version: >= 2.5
 Standards-Version: 3.8.0
 Homepage: http://www.monetdb.nl
 
@@ -16,7 +16,7 @@ Description: Python client API for MonetDB
  main-memory perspective with use of a fully decomposed storage model,
  automatic index management, extensibility of data types and search
  accelerators, SQL- and XML- frontends.
- 
+ .
  This package contains the files needed to use MonetDB from a Python
  program.
 
