Cleaned up cleaning up. `make clean' should clean up to a state that everything that you would normally want rebuilt using `make' gets removed, and in such a way that there is no need to run configure again. `make distclean' should clean up everything that is not part of the sources, so that you do have to run configure again. This is complicated by the fact that we need to distinguish between sources from Mercurial or sources from a tar ball distribution. In a Makefile.am file you can set variables MOSTLYCLEANFILES to add files to the `make clean' scenario that automake doesn't know about. Before, all files in BUILT_SOURCES were added.  BUILT_SOURCES basically contains generated source files.  But in the tar ball scenario, many of those generated source files were part of the tar ball and hence should not be removed by `make clean'. So now we add files explicitly:  In am.py there is a variable am['CLEAN'] that contains the files that have to always be removed using `make clean' (i.e. files that are not part of the tar ball), and a variable am['MXCLEAN'] that contains files that should be removed only when building from Mercurial sources (i.e. generated source files).
Most of the rest of the changes is just fine-tuning what gets removed
and making sure that configure itself doesn't leave behind junk.

Hopefully this fixes bug 2680.  Unfortunately, I did not receive
confirmation that my analysis of the bug was correct, so I can't be
sure.

--- a/sql/src/server/Makefile.ag
+++ b/sql/src/server/Makefile.ag
@@ -19,7 +19,7 @@
 
 INCLUDES = ../include ../common ../storage $(CLIENTS_INCS) $(MONETDB_INCS)
 
-YFLAGS = -d -p sql -v
+YFLAGS = -d -p sql
 
 #  Some versions of flex & bison seem to generate code
 #  that does not compile with `gcc -Wundef`;
