Cleanup configure. Don't check for declarations of library functions: if the function exists, it must be declared by a header file.  If not, it just means that some feature macro needs to be defined to get the declaration.

--- a/buildtools/Mx/configure.ac
+++ b/buildtools/Mx/configure.ac
@@ -46,7 +46,7 @@ AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_FUNC_STAT
 AC_FUNC_VPRINTF
-AC_CHECK_FUNCS([memset mkdir strchr strcspn strrchr strstr utime])
+AC_CHECK_FUNCS([getopt memset mkdir strchr strcspn strrchr strstr utime])
 AC_CHECK_DECLS(getopt)
 
 # Other checks
