Simple functionality for FITS files: fits.attach(filename) reads the metainformation about tables in a given FITS file and fills the SQL FITS catalog tables: fits_files, fits_tables, and fits_columns.

--- a/sql/src/backends/monet5/vaults/Makefile.ag
+++ b/sql/src/backends/monet5/vaults/Makefile.ag
@@ -15,32 +15,14 @@
 # Copyright August 2008-2010 MonetDB B.V.
 # All Rights Reserved.
 
-INCLUDES = ../../include ../../common ../../storage ../../server ../ \
-	$(MONETDB5_INCS) $(CLIENTS_INCS) $(MONETDB_INCS) $(READLINE_INCS) $(MSEED_CFLAGS)
+INCLUDES = ../../../include ../../../common ../../../storage ../../../server ../ \
+	$(MONETDB5_INCS) $(CLIENTS_INCS) $(MONETDB_INCS) $(READLINE_INCS) $(MSEED_CFLAGS) $(CFITSIO_CFLAGS)
 
 lib__vault = {
 	DIR = libdir/MonetDB5/
 	SOURCES = vault.mx
 	LIBS = $(MONETDB5_LIBS) -lmonetdb5 \
-		$(MONETDB_LIBS) -lbat
-}
-
-headers_h = {
-	HEADERS = h
-	DIR = includedir/MonetDB5/sql
-	SOURCES = vault.mx
-}
-
-headers_mal = {
-	HEADERS = mal
-	DIR = libdir/MonetDB5
-	SOURCES = vault.mx vault.sql
-}
-
-headers_autoload = {
-	HEADERS = mal
-	DIR = libdir/MonetDB5/autoload
-	SOURCES = 70_vault.mal
+		$(MONETDB_LIBS) -lbat $(MSEED_LIBS) 
 }
 
 lib__mseed = {
@@ -51,11 +33,17 @@ lib__mseed = {
 		$(MONETDB_LIBS) -lbat $(MSEED_LIBS)
 }
 
-headers_mseedautoload = {
-	COND = HAVE_MSEED
-	HEADERS = mal
-	DIR = libdir/MonetDB5/autoload
-	SOURCES = 71_mseed.mal
+lib__fits = {
+    COND = HAVE_CFITSIO
+    DIR = libdir/MonetDB5/
+    SOURCES = fits.mx
+    LIBS = $(MONETDB5_LIBS) -lmonetdb5 $(MONETDB_LIBS) $(CFITSIO_LIBS)
+}
+
+headers_h = {
+	HEADERS = h
+	DIR = includedir/MonetDB5/sql
+	SOURCES = vault.mx
 }
 
 headers_mseedh = {
@@ -65,6 +53,19 @@ headers_mseedh = {
 	SOURCES = mseed.mx
 }
 
+headers_fitsh = {
+	COND = HAVE_CFITSIO
+	HEADERS = h
+	DIR = includedir/MonetDB5/sql
+	SOURCES = fits.mx
+}
+
+headers_mal = {
+	HEADERS = mal
+	DIR = libdir/MonetDB5
+	SOURCES = vault.mx vault.sql
+}
+
 headers_mseedmal = {
 	COND = HAVE_MSEED
 	HEADERS = mal
@@ -72,5 +73,32 @@ headers_mseedmal = {
 	SOURCES = mseed.mx
 }
 
+headers_fitsmal = {
+	COND = HAVE_CFITSIO
+	HEADERS = mal
+	DIR = libdir/MonetDB5
+	SOURCES = fits.mx
+}
+
+headers_autoload = {
+	HEADERS = mal
+	DIR = libdir/MonetDB5/autoload
+	SOURCES = 70_vault.mal
+}
+
+headers_mseedautoload = {
+	COND = HAVE_MSEED
+	HEADERS = mal
+	DIR = libdir/MonetDB5/autoload
+	SOURCES = 71_mseed.mal
+}
+
+headers_fitsautoload = {
+    COND = HAVE_CFITSIO
+    HEADERS = mal
+    DIR = libdir/MonetDB5/autoload
+    SOURCES = 72_fits.mal
+}
+
 EXTRA_DIST_DIR = Tests
-EXTRA_DIST = 70_vault.mal 71_mseed.mal vault.sql
+EXTRA_DIST = 70_vault.mal 71_mseed.mal vault.sql 72_fits.mal
