Fix getting symbols from DLL on Windows. We use dlsym() to look up symbols in dynamically loaded modules and in the main program.  When a symbol is located in a DLL which is linked to the main program (i.e. not dynamically loaded using dlopen), we need to specify the name of that library in the call to GetModuleHandle, otherwise we won't find the symbols.

--- a/MonetDB5/src/tools/Makefile.ag
+++ b/MonetDB5/src/tools/Makefile.ag
@@ -20,6 +20,8 @@ INCLUDES = -I../mal \
 	$(monetdbmapi_CFLAGS) $(monetdbcommon_CFLAGS) $(monetdbstream_CFLAGS) \
 	$(openssl_CFLAGS) $(pcre_CFLAGS) $(libxml2_CFLAGS)
 
+# the name (libmonetdb5) is also used in ../mal/mal_linker.mx
+# if you change the name here, change it there as well
 lib_monetdb5 = {
 	NAME = monetdb5
 	SCRIPTS = mal
