--- a/MonetDB5/src/extras/crackers/Makefile.ag
+++ b/MonetDB5/src/extras/crackers/Makefile.ag
@@ -28,7 +28,7 @@ lib_crackers = {
 		crackers_core_ordered.mx crackers_core_unordered.mx crackers_validation.mx \
 		crackers_joinselect_ops.mx crackers_select_ops.mx crackers_sideways.mx crackers_partial_sideways.mx crackers_updates.mx crackers_joins.mx crackers_sortmerge.mx crackers_crackmerge.mx crackers_pq.mx \
 		crackers_populate.mx
-	LIBS = ../../tools/libmonetdb5 $(monetdbcommon_LIBS) \
+	LIBS = ../../tools/libmonetdb5 $(monetdbcommon_LIBS) $(monetdbstream_LIBS) \
                 $(MALLOC_LIBS)
 }
 
