--- a/MonetDB5/src/extras/xml/Makefile.ag
+++ b/MonetDB5/src/extras/xml/Makefile.ag
@@ -24,7 +24,8 @@ lib__xml = {
 	SOURCES = xml.mx 
 
 	#SCRIPTS = mal
-	LIBS = $(monetdbcommon_LIBS) $(MALLOC_LIBS) $(libxml2_LIBS)
+	LIBS = ../../tools/libmonetdb5 $(monetdbcommon_LIBS) $(MALLOC_LIBS) \
+		$(libxml2_LIBS)
 }
 
 headers_xml_autoload = {
@@ -49,7 +50,7 @@ lib_batxml = {
 	DIR = libdir/MonetDB5
 	SEP = _
 	SOURCES = batxml.mx
-	LIBS = ../../tools/libmonetdb5 $(monetdbcommon_LIBS) $(MATH_LIBS) \
+	LIBS = lib_xml ../../tools/libmonetdb5 $(monetdbcommon_LIBS) $(MATH_LIBS) \
                 $(MALLOC_LIBS) $(libxml2_LIBS)
 }
 
