removed remaining traces of obsolete sysdefs.h

--- a/sql/src/backends/monet5/merovingian/client/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/client/Makefile.ag
@@ -18,7 +18,7 @@
 man_MANS = monetdb.1
 
 # MONETDB5: Sabaoth
-# MONETDB:  GDKmalloc, stream, sysdefs.h
+# MONETDB:  GDKmalloc, stream
 INCLUDES = \
 	$(MONETDB5_INCS) \
 	$(MONETDB_INCS) \
