--- a/sql/src/backends/monet5/merovingian/utils/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/utils/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 # MONETDB5: Sabaoth
-# MONETDB:  GDKmalloc, stream, sysdefs.h
+# MONETDB:  GDKmalloc, stream
 INCLUDES = \
 	$(MONETDB5_INCS) \
 	$(MONETDB_INCS)
