--- a/sql/NT/sql_config.h.in
+++ b/sql/NT/sql_config.h.in
@@ -21,6 +21,8 @@
 
 #include <winconfig.h>
 
+#define lstat stat
+
 /* ! Should be replaced by `monetdb5-config --prefix` ! */
 #define MONETDB5_PREFIX "@QXprefix@"
 /* ! Should be replaced by `monetdb5-config --sysconfdir`\monetdb5.conf ! */
