Remove generated file.

--- a/.hgignore
+++ b/.hgignore
@@ -58,6 +58,7 @@ TAGS$
 ^pathfinder/conf/compile$
 ^python/build/
 ^python/dist/
+^python/MANIFEST$
 ^sql/NT/MonetDB-SQL\.pc$
 aclocal\.m4$
 acout\.in$
