Implemented a multiplex funnel.
This functionality has very rough edges currently, and there is no
single client that can use it (mclient doesn't accept language
multiplex-funnel, jdbcclient doesn't render results), but so far it
seems to attach and detach clients fairly well, thereby answering
queries reasonably fast as well.

Committing this to give a heads up on the NOZHUP deliverables status.

--- a/sql/src/backends/monet5/merovingian/daemon/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/daemon/Makefile.ag
@@ -22,6 +22,7 @@ man_MANS = monetdbd.1
 INCLUDES = \
 	$(MONETDB5_INCS) \
 	$(MONETDB_INCS) \
+	$(CLIENTS_INCS) \
 	-I..
 
 EXTRA_DIST = $(man_MANS) \
@@ -32,6 +33,7 @@ EXTRA_DIST = $(man_MANS) \
 	discoveryrunner.h \
 	forkmserver.h \
 	handlers.h \
+	multiplex-funnel.h \
 	peering.h \
 	proxy.h
 
@@ -45,12 +47,14 @@ bin_monetdbd = {
 		discoveryrunner.c \
 		forkmserver.c \
 		handlers.c \
+		multiplex-funnel.c \
 		peering.c \
 		proxy.c
 	LIBS = \
 		../utils/libmeroutil \
 		$(MONETDB5_LIBS) -lmonetdb5 \
 		$(MONETDB_LIBS) -lbat -lstream \
+		$(CLIENTS_LIBS) -lMapi \
 		$(SOCKET_LIBS) \
 		$(MALLOC_LIBS) \
 		$(PTHREAD_LIBS)
