--- a/geom/RunMserver.bat.in
+++ b/geom/RunMserver.bat.in
@@ -18,7 +18,8 @@ if %V% == 4 call "%monetdb4_prefix%\bin\monetdb4-config.bat" --internal
 if %V% == 5 call "%monetdb5_prefix%\bin\monetdb5-config.bat" --internal
 call "%sql_prefix%\bin\monetdb-sql-config.bat" --internal
 
-set builddir=@GEOM_BUILD@
+set buildbase=@BUILD@
+set builddir=%buildbase%\geom
 
 set MOD_PATH=%modpath%
 if %V% == 4 set MOD_PATH=%modpath4%;%MOD_PATH%
