--- a/java/RunMtest.bat.in
+++ b/java/RunMtest.bat.in
@@ -9,8 +9,9 @@ goto end
 setlocal
 
 set pkg=monetdb-java
-set builddir=@XMONETDB_JAVA_BUILD@
-set srcdir=@XMONETDB_JAVA_SOURCE@
+set buildbase=@XBUILD@
+set builddir=%buildbase%\java
+set srcdir=@XSOURCE@\java
 
 set PATH=%builddir%\conf;%PATH%
 
