--- a/pathfinder/RunMserver.in
+++ b/pathfinder/RunMserver.in
@@ -16,7 +16,8 @@
 # Portions created by CWI are Copyright (C) 1997-2008 CWI.
 # All Rights Reserved.
 
-builddir=@QXPATHFINDER_BUILD@
+buildbase=@QXBUILD@
+builddir="${buildbase}/pathfinder"
 
 # where compiled modules are to be found
 MOD_PATH="${builddir}/runtime/.libs:${builddir}/runtime:${builddir}/modules/pftijah/.libs:${builddir}/modules/pftijah:`monetdb4-config --modpath`"
