--- a/pathfinder/RunMtest.bat.in
+++ b/pathfinder/RunMtest.bat.in
@@ -20,8 +20,9 @@ if %V% == 4 call "%monetdb4_prefix%\bin\monetdb4-config.bat" --internal
 if %V% == 5 call "%monetdb5_prefix%\bin\monetdb5-config.bat" --internal
 
 set pkg=monetdb-xquery
-set builddir=@XPATHFINDER_BUILD@
-set srcdir=@XPATHFINDER_SOURCE@
+set buildbase=@XBUILD@
+set builddir=%buildbase%\pathfinder
+set srcdir=@XSOURCE@\pathfinder
 
 set MOD_PATH=%modpath%
 set MOD_PATH=%builddir%\modules\pftijah;%MOD_PATH%
