--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -18,7 +18,8 @@
 # All Rights Reserved.
 
 pkg=monetdb-template
-builddir=@QTEMPLATE_BUILD@
+buildbase=@QBUILD@
+builddir="${buildbase}/template"
 # make sure srcdir contains absolute path name
 srcdir=`cd '@srcdir@'; pwd`
 uname=`uname`
