--- a/MonetDB5/RunMapprove.bat.in
+++ b/MonetDB5/RunMapprove.bat.in
@@ -18,7 +18,7 @@ set PATH=%builddir%\conf;%PATH%
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
 
-call Mapprove.py --config="%builddir%/conf/monetdb5.conf" --package=%pkg% "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\src\Mapprove.py" --config="%builddir%/conf/monetdb5.conf" --package=%pkg% "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
