--- a/MonetDB5/RunMapprove.in
+++ b/MonetDB5/RunMapprove.in
@@ -33,4 +33,4 @@ cd "$srcdir"
 # execute the script.
 # if no arguments, do a recursive approve (Mapprove.py -r), else pass
 # on the arguments
-exec Mapprove.py --config="${builddir}/conf/monetdb5.conf" --package=${pkg} --TSTTRGBASE="${builddir}" "${@--r}"
+exec python "${buildbase}/testing/src/Mapprove.py" --config="${builddir}/conf/monetdb5.conf" --package=${pkg} --TSTTRGBASE="${builddir}" "${@--r}"
