--- a/geom/RunMtest.bat.in
+++ b/geom/RunMtest.bat.in
@@ -50,7 +50,7 @@ set PATH=%GEOS%\bin;%PATH%
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call Mtest.py -%V% "--package=%pkg%" "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
+call "%buildbase%\testing\src\Mtest.py" -%V% "--package=%pkg%" "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 popd
 endlocal
