--- a/pathfinder/RunMapprove.bat.in
+++ b/pathfinder/RunMapprove.bat.in
@@ -23,7 +23,7 @@ set PATH=%builddir%\conf;%PATH%
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
 
-call Mapprove.py -%V% --package=%pkg% "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
+call "%buildbase%\testing\src\Mapprove.py" -%V% --package=%pkg% "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 popd
 endlocal
