--- a/sql/RunMtest.bat.in
+++ b/sql/RunMtest.bat.in
@@ -37,7 +37,7 @@ set PYTHONPATH=%builddir%\src\backends\python\monet5;%PYTHONPATH%
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call Mtest.py "--package=%pkg%" "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
+call "%buildbase%\testing\src\Mtest.py" "--package=%pkg%" "--monet_mod_path=%MOD_PATH%" "--dbfarm=%builddir%\dbfarm" "--TSTTRGBASE=%builddir%" %1 %2 %3 %4 %5 %6 %7 %8 %9
 
 popd
 endlocal
