--- a/java/RunMtest.bat.in
+++ b/java/RunMtest.bat.in
@@ -18,7 +18,7 @@ set PATH=%builddir%\conf;%PATH%
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
-call "%buildbase%\testing\src\Mtest.py" --package=%pkg% "--TSTTRGBASE=%builddir%" %*
+call "%buildbase%\testing\src\Mtest.py" --package=%pkg% "--TSTSRCBASE=%srcdir%" "--TSTTRGBASE=%builddir%" %*
 
 popd
 endlocal
