--- a/pathfinder/RunMtest.in
+++ b/pathfinder/RunMtest.in
@@ -91,4 +91,4 @@ cd "$srcdir"
 # arguments.
 # if the environment variable MTEST_AT is set (value does not matter), pass
 # the --at flag to Mtest.py so that it uses the at command as a watchdog.
-exec python "${buildbase}/testing/src/Mtest.py" -$V --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --xrpc_docroot="${srcdir}/runtime/xrpc" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
+exec python "${buildbase}/testing/src/Mtest.py" -$V --package=${pkg} --monet_mod_path="${MOD_PATH}" --dbfarm="${builddir}/dbfarm" --xrpc_docroot="${srcdir}/runtime/xrpc" --TSTSRCBASE="${srcdir}" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
