--- a/java/RunMtest.in
+++ b/java/RunMtest.in
@@ -44,4 +44,4 @@ cd "$srcdir"
 # arguments.
 # if the environment variable MTEST_AT is set (value does not matter), pass
 # the --at flag to Mtest.py so that it uses the at command as a watchdog.
-exec python "${buildbase}/testing/src/Mtest.py" --package=${pkg} --TSTSRCBASE="${srcdir}" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
+exec python "${buildbase}/testing/src/Mtest.py" --package=${pkg} --dbfarm="${builddir}/dbfarm" --TSTSRCBASE="${srcdir}" --TSTTRGBASE="${builddir}" ${MTEST_AT+--at} "${@--rq}"
