set PYTHONPATH such that `RunMtest` (and hence `make check`) finds its modules from <builddir>/testing/src/ and likewise for `RunMapprove`
TODO:
patch imports in Mtext.py.in accordingly !??

--- a/MonetDB4/RunMapprove.in
+++ b/MonetDB4/RunMapprove.in
@@ -27,6 +27,9 @@ srcdir=`cd '@srcdir@'; pwd`
 PATH="${builddir}/conf:$PATH"
 export PATH
 
+PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+export PYTHONPATH
+
 # execute Mapprove.py in the source directory
 cd "$srcdir"
 
