--- a/sql/RunMapprove.bat.in
+++ b/sql/RunMapprove.bat.in
@@ -15,6 +15,8 @@ set srcdir=@XSOURCE@\sql
 
 set PATH=%builddir%\conf;%PATH%
 
+set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+
 REM execute Mapprove.py in the source directory
 pushd %srcdir%
 
