--- a/MonetDB4/RunMtest.bat.in
+++ b/MonetDB4/RunMtest.bat.in
@@ -30,6 +30,8 @@ set PATH=%builddir%\src\monet;%PATH%
 set PATH=%builddir%\src\tools;%PATH%
 set PATH=%builddir%\conf;%PATH%
 
+set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
