--- a/MonetDB4/RunMtest.in
+++ b/MonetDB4/RunMtest.in
@@ -46,6 +46,9 @@ libpath="${MOD_PATH}:${builddir}/src/monet/.libs"
 PATH="${binpath}:$PATH"
 export PATH
 
+PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+export PYTHONPATH
+
 if [ "${LD_LIBRARY_PATH}" ] ; then
 	LD_LIBRARY_PATH=":${LD_LIBRARY_PATH}"
 fi
