--- a/MonetDB5/RunMtest.in
+++ b/MonetDB5/RunMtest.in
@@ -48,6 +48,9 @@ libpath="${MOD_PATH}:${builddir}/src/mal/.libs"
 PATH="${binpath}:$PATH"
 export PATH
 
+PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+export PYTHONPATH
+
 if [ "${LD_LIBRARY_PATH}" ] ; then
 	LD_LIBRARY_PATH=":${LD_LIBRARY_PATH}"
 fi
