--- a/clients/RunMtest.in
+++ b/clients/RunMtest.in
@@ -36,7 +36,7 @@ done
 PATH="${builddir}/conf:${builddir}/src/mapiclient:${builddir}/src/python:$PATH"
 export PATH
 
-PYTHONPATH="${srcdir}/src/python:${PYTHONPATH}"
+PYTHONPATH="${srcdir}/src/python:${buildbase}/testing/src:${PYTHONPATH}"
 export PYTHONPATH
 
 # execute Mtest.py in the source directory
