--- a/java/RunMtest.bat.in
+++ b/java/RunMtest.bat.in
@@ -15,6 +15,8 @@ set srcdir=@XSOURCE@\java
 
 set PATH=%builddir%\conf;%PATH%
 
+set PYTHONPATH=%buildbase%\testing\src;%PYTHONPATH%
+
 REM execute Mtest.py in the source directory
 pushd %srcdir%
 
