--- a/java/RunMtest.in
+++ b/java/RunMtest.in
@@ -36,6 +36,9 @@ done
 PATH="${builddir}/conf:$PATH"
 export PATH
 
+PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+export PYTHONPATH
+
 # execute Mtest.py in the source directory
 cd "$srcdir"
 
