--- a/pathfinder/RunMapprove.in
+++ b/pathfinder/RunMapprove.in
@@ -43,6 +43,9 @@ done
 PATH="${builddir}/conf:$PATH"
 export PATH
 
+PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+export PYTHONPATH
+
 # execute Mapprove.py in the source directory
 cd "$srcdir"
 
