--- a/template/RunMapprove.in
+++ b/template/RunMapprove.in
@@ -37,6 +37,9 @@ done
 PATH="${builddir}/conf:$PATH"
 export PATH
 
+PYTHONPATH="${buildbase}/testing/src:${PYTHONPATH}"
+export PYTHONPATH
+
 # execute Mapprove.py in the source directory
 cd "$srcdir"
 
