--- a/MonetDB4/RunMtest.in
+++ b/MonetDB4/RunMtest.in
@@ -31,16 +31,8 @@ do
 done
 MOD_PATH="${MOD_PATH}${srcdir}/scripts/tools"
 
-# make sure scripts are executable
-for x in "${builddir}/conf/${pkg}-config"
-do
-	if [ -s $x ] ; then
-		chmod +x $x
-	fi
-done
-
 # enhance various paths to find our stuff
-binpath="${builddir}/conf:${builddir}/src/tools"
+binpath="${builddir}/src/tools"
 libpath="${MOD_PATH}:${builddir}/src/monet/.libs"
 
 PATH="${binpath}:$PATH"
