--- a/clients/RunMtest.in
+++ b/clients/RunMtest.in
@@ -25,7 +25,7 @@ srcdir=`cd '@srcdir@'; pwd`
 uname=`uname`
 
 # make sure scripts are executable
-for x in "${builddir}/conf/${pkg}-config" "${builddir}/src/python/mclient.py"
+for x in "${builddir}/src/python/mclient.py"
 do
 	if [ -s $x ] ; then
 		chmod +x $x
@@ -33,7 +33,7 @@ do
 done
 
 # enhance various paths to find our stuff
-PATH="${builddir}/conf:${builddir}/src/mapiclient:${builddir}/src/python:$PATH"
+PATH="${builddir}/src/mapiclient:${builddir}/src/python:$PATH"
 export PATH
 
 PYTHONPATH="${srcdir}/src/python:${buildbase}/testing/src:${PYTHONPATH}"
