--- a/sql/RunMtest.in
+++ b/sql/RunMtest.in
@@ -34,16 +34,8 @@ do
 done
 MOD_PATH="${MOD_PATH}`monetdb5-config --modpath`"
 
-# make sure scripts are executable
-for x in "${builddir}/conf/${pkg}-config"
-do
-	if [ -s $x ] ; then
-		chmod +x $x
-	fi
-done
-
 # enhance various paths to find our stuff
-binpath="${builddir}/conf:${builddir}/src/backends/monet5"
+binpath="${builddir}/src/backends/monet5"
 libpath="${MOD_PATH}:${builddir}/src/server/.libs"
 
 PATH="${binpath}:$PATH"
